--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,18 @@
     float: right;
 
 }
+
+.some-intro{
+    color:#2F327D ;
+    font-weight: 700;
+}
+.mycalendar{
+    margin-top:-50px;
+    margin-right: 40%;
+    float: right;
+    font-size:75px;
+    /* justify-content: center; */
+}
+.cal{
+    margin-top: -120px;
+}
