add some features

--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,80 @@
     margin-left:150px;
     border-radius: 50px;
 }
+
+.part3{
+    color: #2F327D;
+}
+
+.part5{
+    margin-left: 60px;
+
+}
+
+.space1{
+    background-image: url(/images/space1.png);
+    background-repeat: no-repeat;
+    /* object-fit: fill; */
+    background-size: cover;
+    border-radius: 25px;
+
+
+
+}
+.space2{
+    background-image: url(/images/space2.png);
+    background-repeat: no-repeat;
+    /* object-fit: fill; */
+    background-size: cover;
+
+}
+.space3{
+    background-image: url(/images/space3.png);
+    background-repeat: no-repeat;
+    /* object-fit: fill; */
+    background-size: cover;
+
+}
+
+.some-text{
+    margin-top: -50px;
+    margin-left: 60px;
+}
+
+.some-div{
+    margin-top: 500px;
+
+}
+
+.heading1{
+    margin-top: 20px;
+}
+.main{
+    display: flex;
+}
+.div1{
+    margin-left: 130px;
+    margin-top: -130px;
+    padding-top: 60px;
+}
+
+.div2{
+    margin-left: -60px;
+}
+.hand{
+    margin-left: 205px;
+    margin-top: -50px;
+}
+
+.border-imp{
+    border: none !important;
+
+}
+.div3{
+    margin-left: 70px;
+    padding-top: 120px;
+}
+
+.div4{
+    margin-left: 160px;
+}
